Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-5300

[C++] 0.13 FAILED to build with option -DARROW_NO_DEFAULT_MEMORY_POOL

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 0.13.0
    • 0.15.0
    • C++

    Description

      I tried to upgrade Apache Arrow to 0.13. But, when building Apache Arrow 0.13 with option -DARROW_NO_DEFAULT_MEMORY_POOL, I got a lot of failures.

      It seems 0.13 assuming default memory pool always available.

       

      My cmake command is:

      make .. -DCMAKE_BUILD_TYPE=Release -DARROW_BUILD_TESTS=off -DARROW_USE_GLOG=off -DARROW_WITH_LZ4=off -DARROW_WITH_ZSTD=off -DARROW_WITH_SNAPPY=off -DARROW_WITH_BROTLI=off -DARROW_WITH_ZLIB=off -DARROW_JEMALLOC=off -DARROW_CXXFLAGS=-DARROW_NO_DEFAULT_MEMORY_POOL

      I tried to fix the compilation by adding some missing constructors. However, it seems this issue is bigger than I expected. It seems all the builders and appenders have this issue as many classes even don't have a memory pool associated.

      Attachments

        Issue Links

          Activity

            People

              fsaintjacques Francois Saint-Jacques
              whjiang Weihua Jiang
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 20m
                  20m