ARROW-5300: [C++] Remove the ARROW_NO_DEFAULT_MEMORY_POOL macro

The option was not maintained, a user can still override ARROW_MEMORY_POOL_DEFAULT.

Closes #5240 from fsaintjacques/ARROW-5300 and squashes the following commits:

fa0c09c62 <François Saint-Jacques> ARROW-5300:  Remove the ARROW_NO_DEFAULT_MEMORY_POOL define

Authored-by: François Saint-Jacques <fsaintjacques@gmail.com>
Signed-off-by: Sutou Kouhei <kou@clear-code.com>